# visp_naoqi

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  camera.xml  metapod.cmake  qiproject.xml
cmake/: FindMetapod.cmake  metapod.cmake  visp_naoqiConfig.cmake.in  visp_naoqiConfigVersion.cmake.in
demos/follow-me/: CMakeLists.txt  pepper_follow_me.cpp
demos/gaze/: CMakeLists.txt  pepper_gaze_head.cpp
doc/: config-doxygen.cmake
example/: CMakeLists.txt
example/grabber/: CMakeLists.txt  image_viewer_opencv.cpp  image_viewer_opencv_2cameras.cpp  image_viewer_visp.cpp  image_viewer_visp_2cameras.cpp  image_viewer_visp_color.cpp
example/parserHomogeneousMatrix/: CMakeLists.txt  dat_to_xml.cpp  loadM.cpp  writeM.cpp
example/robot/: CMakeLists.txt  eye_control.cpp  hand_tracking.cpp  head_control.cpp  motion.cpp  motion_nao.cpp  motion_pepper.cpp  motion_romeo.cpp  test_jacobian.cpp  test_jacobian_pepper.cpp  test_libqi.cpp  test_manipulability.cpp  test_pepper_follow_me.cpp
include/al/: from_any_value.cpp
include/metapod/: common.hh
include/visp_naoqi/: camera.xml  camera.xml.bak  eMc.xml  learned_oMh.xml  vpNaoqiConfig.h.cmake  vpNaoqiGrabber.h  vpNaoqiRobot.h  vpXmlParserHomogeneousMatrix.h
include/visp_naoqi/common/: vpFaceTrackerOkao.h  vpPepperFollowPeople.h  vpServoHead.h
share/: 2015_04_23_-_ROMEOH37.urdf  JulietteY20MP.gv  RomeoH37.gv  pepper.urdf  romeo.Trunkdifferenntchainge.urdf  romeo.old.urdf  romeo.urdf  romeo3FEB2015.urdf  romeo_SET2015.urdf
share/metapod/: metapod_license_file.txt  pepper.config  romeo.config
src/common/: vpFaceTrackerOkao.cpp  vpPepperFollowPeople.cpp  vpPepperFollowPeople.h  vpServoArm.cpp  vpServoHead.cpp
src/grabber/: vpNaoqiGrabber.cpp
src/parser/: vpXmlParserHomogeneousMatrix.cpp
src/robot/: vpNaoqiRobot (copy).cpp  vpNaoqiRobot.cpp
tools/calibration/: CMakeLists.txt  camera_calibration.cpp  camera_calibration_ext.cpp  camera_calibration_test.cpp
